--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,49 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #7EA0F6;
+  /* background-color: #7EA0F6; */
+ 
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 100%;
+  min-height: 100vh;
+}
+
+.backgroundContainer {
+  /* position: relative; */
+  width: 100%;
+  /* Full height */
+  /* overflow: hidden; */
+}
+
+.backgroundImg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 40%;
+  background-size:auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: 5s ease-in-out; /* Smooth transition */
+  opacity: 20%;
+}
+
+.fade-in {
+  opacity: 1;
+}
+
+.fade-out {
+  opacity: 0;
 }
 
 a {
@@ -22,27 +59,23 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 main {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  position: relative;
+  z-index: 2;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
   text-shadow: 2px 2px 1px rgba(0,0,0,0.6);
-  color: black;
-  font-weight: 400;
+  color: white;
+  font-weight: 600;
+  position: relative;
+  z-index: 2;
 }
 
 button {
@@ -56,6 +89,9 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
   margin-top: 1rem;
+  -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
 }
 button:hover {
   border-color: #646cff;
@@ -86,6 +122,7 @@ form {
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
+  background-color: white;
   border: black solid 1px;
   padding: 1rem;
   border-radius: 5%;
@@ -105,14 +142,14 @@ label {
 }
 
 input {
-  background-color: #97ade6;
+  background-color: #b3b5b1;
   border-radius: 5px;
-  border: solid 1px black;
+  border: 1.5px inset #0f0f0f;
   color: black;
 }
 
 input:hover {
-  background-color: #7EA0F6;
+  background-color: white;
 }
 
 /* List styles */
@@ -138,6 +175,7 @@ li {
   height: auto;
   padding: .5rem; 
   list-style-type: none;
+  background-color: white;
 }
 
 h3 {
